assets/css/real-estate.css
.app-body {
    display: flex;
    flex-direction: column;
}

/* Section Start */
.app-body > .section-header {
    display: flex;
    flex-direction: column;
}

.app-body > .section-header > .content, 
.app-body > .section-header > .additional-content {
    display: flex;
    flex-direction: row;
    flex: 1;
}

.app-body > .section-header > .content > .left {
    display: flex;
    flex: 1;
    flex-direction: column;
    min-height: 50vh;
    font-size: 20px;
    font-weight: 900;
    -webkit-font-smoothing: antialiased;
}

.app-body > .section-header > .content > .left > .top {
    background-color: #ffdf00;
    flex: 1;
    padding: 1.8rem;
}

.app-body > .section-header > .content > .left > .bottom {
    flex: 1;
    background-color: #0468e9;
    padding: 1.8rem;
}

.app-body > .section-header > .content > .right {
    display: flex;
    flex: 1;
    position: relative;
}

.app-body > .section-header > .content > .right > img {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    box-sizing: border-box;
    padding: 0;
    border: none;
    margin: auto;
    display: block;
    width: 0;
    height: 0;
    min-width: 100%;
    max-width: 100%;
    min-height: 100%;
    max-height: 100%;
    object-fit: cover;
}
/* Section Header End */


/* Section First Start */
.app-body > .section-first {
    display: flex;
    flex-direction: column;
}

.app-body > .section-first > .content {
    display: flex;
    flex-direction: row;
    position: relative;
    min-height: 50vh;
    width: 100%;
}


.app-body > .section-first > .content > .carousel {
    position: absolute;
    display: flex;
    height: 100%;
    width: 100%;
}

.app-body > .section-first > .content > .carousel > .left {
    position: relative;
    flex: 1;
}

.app-body > .section-first > .content > .carousel > .left > img {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    box-sizing: border-box;
    padding: 0;
    border: none;
    margin: auto;
    display: block;
    width: 0;
    height: 0;
    min-width: 100%;
    max-width: 100%;
    min-height: 100%;
    max-height: 100%;
    object-fit: cover;
}

.app-body > .section-first > .content > .carousel > .right {
    flex: 1;
    height: 100%;
    background-color: #fffbf7;
}

.app-body > .section-first > .content > .carousel > .right > div {
    font-size: 20px;
    background-color: #fffbf7;
    padding: 2rem;
    -webkit-font-smoothing: antialiased; 
}

.app-body > .section-first > .content > .carousel > .right > div > span {
    font-weight: bold;
    font-size: 14px;
    text-transform: uppercase;
    -webkit-font-smoothing: antialiased;
}

.app-body > .section-first > .content > .carousel > .right > div > p:first-of-type {
    font-weight: bolder;
    font-size: 34px;
    margin: 0.5rem 0;
    -webkit-font-smoothing: antialiased;
}

.app-body > .section-first > .content > .button-container {
    position: absolute;
    display: flex;
    margin-top: auto;
    height: fit-content;
    gap: 1rem;
    right: 0;
    left: 0;
    bottom: 0;
    margin: 3rem auto;
    transform: translate(5.5rem, 0);
    justify-content: center;
}

.app-body > .section-first > .content > .button-container > div {
    background-color: #01071b;
    color: #fffbf7;
    padding: 0.7rem;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 100%;
    cursor: pointer;
}

.app-body > .section-first > .content > .button-container > div > i {
   font-size: 1rem;
}
/* Section First End*/


/* Section 2 Start */
.app-body > .section-customer {
    display: flex;
    flex-direction: column;
    background-color: #36a16d;
}

.app-body > .section-customer > .content {
    display: flex;
    flex-direction: column;
    background-color: #36a16d;
}

.app-body > .section-customer > .content > .header {
    display: flex;
    flex-direction: column;
    padding-top: 110px;
    padding-bottom: 110px;
}

.app-body > .section-customer > .content > .body > .intercept > .img-content {
    min-height: 350px;
}

.app-body > .section-customer > .content > .header > span {
    text-align: center;
    margin-bottom: 0.4em;
    font-size: 18px;
    line-height: 1.2;
    font-weight: 700;
    letter-spacing: 0.1em;
    text-transform: uppercase;
    font-size: 1rem;
    -webkit-font-smoothing: antialiased;
}

.app-body > .section-customer > .content > .header > h2 {
    text-align: center;
    line-height: 1.1;
    font-size: 57px;
    letter-spacing: -0.02em;
    font-weight: bold;
    -webkit-font-smoothing: antialiased;
    margin: 0;
}


.app-body > .section-customer > .content > .body {
    display: flex;
    flex-direction: column;
    background-color: #36a16d;
    padding-top: 200px;
}

.app-body > .section-customer > .content > .body > .intercept {
    position: relative;
    background-color: #FFFBF7;
}

.app-body > .section-customer > .content > .body > .intercept > .img-content {
    width: calc(4 / 6 * (100% - 60px * 2));
    position: relative;
    margin: 0px auto;
    z-index: 1;
    padding-bottom: 35px;
    margin-top: -220px;
}

.app-body > .section-customer > .content > .body > .intercept > .img-content::before {
    content: "";
    background: #FFFBF7;
    position: absolute;
    inset: 50% 0px 0px;
    z-index: 0;
    pointer-events: none;
}

.app-body > .section-customer > .content > .body > .intercept > .img-content > img {
    position: absolute;
    inset: 0px;
    box-sizing: border-box;
    padding: 0px;
    border: none;
    margin: auto;
    display: block;
    width: 0px;
    height: 0px;
    min-width: 100%;
    max-width: 100%;
    min-height: 100%;
    max-height: 100%;
    object-fit: cover;
}

.app-body > .section-customer > .content > .body > .list-content {
    display: flex;
    flex: 1;
    flex-direction: column;
    background: #FFFBF7;
    padding: 40px 0 80px;
}

.app-body > .section-customer > .content > .body > .list-content > .list {
    width: 100%;
    display: grid;
    margin: 0px auto;
    color: #BAE3F8;
    width: calc(6 / 8 * (100% - 40px * 2));
    grid-template-columns: repeat(3, 1fr);
    gap: 120px 30px;
    z-index: 1;
    position: relative;
}

.app-body > .section-customer > .content > .body > .list-content > .list > .item {
    display: flex;
    flex-direction: column;
}

.app-body > .section-customer > .content > .body > .list-content > .list > .item > h3 {
    letter-spacing: -0.02em;
    margin-bottom: 0.4em;
    color: #01071B;
    font-size: 24px;
    line-height: 1.15;
    font-weight: 700;
    letter-spacing: -0.01em;
    -webkit-font-smoothing: antialiased;
}

.app-body > .section-customer > .content > .body > .list-content > .list > .item > p {
    color: #01071B;
    line-height: 1.4;
    margin-top: 0px;
    margin-bottom: 0px;
}

.app-body > .section-customer > .content > .body > .list-content > .btn-content {
    display: flex;
    justify-content: center;
}

.app-body > .section-customer > .content > .body > .list-content > .btn-content > button {
    padding: 12px 24px;
    text-align: center;
    margin-top: 80px;
}
/* Section 2 End */


.app-body > .section-contact {
    display: flex;
    flex-direction: column;
    background-color: #FFFBF7;
}

.app-body > .section-contact > .additional-content {
    display: flex;
    flex-direction: row;
    flex: 1;
    height: 100%;
    min-height: 430px;
}

.app-body > .section-contact > .additional-content > .right {
    display: flex;
    flex-direction: column;
    flex: 1;
}

.app-body > .section-contact > .additional-content > .right > img {
    min-width: 100%;
    max-width: 100%;
    min-height: 100%;
    max-height: 100%;
    object-fit: cover;
}

.app-body > .section-contact > .additional-content > .left {
    display: flex;
    flex-direction: column;
    flex: 1;
}

.app-body > .section-contact > .additional-content > .left > .bg-top {
    display: flex;
    flex-direction: column;
    flex: 1;
    background: #bae3f8;
    height: calc(40vh - (80px / 2));
    padding: 40px;
}

.app-body > .section-contact > .additional-content > .left > .bg-top > span {
    margin-bottom: 20px;
    font-weight: bold;
    font-size: 12px;
}

.app-body > .section-contact > .additional-content > .left > .bg-top > h2 {
    font-size: 35px !important;
    letter-spacing: -0.02em;
    line-height: 1.06;
    font-weight: bold;
    -webkit-font-smoothing: antialiased;
}

.app-body > .section-contact > .additional-content > .left > .bg-top > p {
    margin-top: 25px;
    font-size: 16px !important;
    line-height: 1.15;
    font-weight: normal;
    -webkit-font-smoothing: antialiased;
}

.app-body > .section-contact > .additional-content > .left > .bg-top > button {
    padding: 6px 12px;
    font-size: 10px;
    margin-top: 24px;
}

@media screen and (min-width: 700px) {
    .app-body > .section-contact > .additional-content > .left > .bg-top > h2  {
        font-size: 48px;
    }

    .app-body > .section-contact > .additional-content > .left > .bg-top > p {
        font-size: 24px;
    }

    .app-body > .section-customer > .content > .body > .intercept > .img-content {
        min-height: 350px;
    }
}

